--- a/index.html
+++ b/index.html
@@ -1,12 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Form Practicing</title>
-</head>
-<body>
-    <h2>This is a HTML Form</h2>
-    
-</body>
+    <style>
+      #f_name,
+      #l_name,
+      #email_add {
+        margin-bottom: 8px;
+      }
+      .selection {
+        margin-bottom: 5px;
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <h2>This is a HTML Form</h2>
+    </header>
+    <nav></nav>
+    <main>
+      <form action="">
+        <section>
+          <div id="f_name">
+            <label for="fName">First Name: </label>
+            <input
+              type="text"
+              name="fName"
+              id="fName"
+              placeholder="Enter First Name"
+            />
+          </div>
+          <div id="l_name">
+            <label for="lName">Last Name: </label>
+            <input
+              type="text"
+              name="lName"
+              id="lName"
+              placeholder="Enter Last Name"
+            />
+          </div>
+          <div id="email_add">
+            <label for="eMail">Email: </label>
+            <input
+              type="email"
+              name="eMail"
+              id="eMail"
+              placeholder="Enter Email"
+            />
+          </div>
+          <div id="phone_num">
+            <label for="pHone">Phone Number: </label>
+            <input
+              type="text"
+              name="pHone"
+              id="pHone"
+              placeholder="Enter Phone Number"
+            />
+          </div>
+        </section>
+        <fieldset>
+          <legend>Select your company</legend>
+          <div class="selection">
+            <input type="radio" name="car" id="toyota" />
+            <label for="toyota">Toyota</label>
+          </div>
+          <div class="selection">
+            <input type="radio" name="car" id="mazda" />
+            <label for="mazda">Mazda</label>
+          </div>
+          <div class="selection">
+            <input type="radio" name="car" id="honda" />
+            <label for="honda">Honda</label>
+          </div>
+        </fieldset>
+        <fieldset>
+          <legend>Choose your Model/s</legend>
+          <div class="checkbox_group">
+            <input type="checkbox" name="model" id="supra">
+            <label for="supra">Supra</label>
+          </div>
+          <div class="checkbox_group">
+            <input type="checkbox" name="model" id="gr86">
+            <label for="gr86">GR86</label>
+          </div>
+          <div class="checkbox_group">
+            <input type="checkbox" name="model" id="grcorolla">
+            <label for="grcorolla">GR Corolla</label>
+          </div>
+          <div class="checkbox_group">
+            <input type="checkbox" name="model" id="gryaris">
+            <label for="gryaris">GR Yaris</label>
+          </div>
+          <div class="checkbox_group">
+            <input type="checkbox" name="model" id="chr">
+            <label for="chr">CHR</label>
+          </div>
+        </fieldset>
+      </form>
+    </main>
+  </body>
 </html>
